--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,5 +28,5 @@ dependencies {
     compile "com.android.support:recyclerview-v7:$ANDROID_SUPPORT_VERSION"
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     testCompile 'junit:junit:4.12'
-    compile project(':swipelayoutlib')
+    compile 'com.github.chztp:SwipeLayout:1.0.0'
 }
